k8s/03-mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: mongo
spec:
  serviceName: mongo-svc
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        app.kubernetes.io/component: mongo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mongo
          image: mongo:7
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d/init.js
              subPath: init.js
              readOnly: true
          livenessProbe:
            exec:
              command: [ "mongosh", "--quiet", "--eval", "db.adminCommand('ping')" ]
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command: [ "mongosh", "--quiet", "--eval", "db.adminCommand('ping')" ]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: mongo-init
          configMap:
            name: mongo-init-script
            defaultMode: 420            # 0644
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
        labels:
          app.kubernetes.io/component: mongo
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: mongo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
