k8s/04-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/component: backend

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: backend
          image: jovannnaaa/restaurant-backend:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /api/tables
              port: 8080
              httpHeaders:
                - name: Host
                  value: backend-svc
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/tables
              port: 8080
              httpHeaders:
                - name: Host
                  value: backend-svc
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080
