k8s/05-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/component: frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: frontend
          image: DOCKER_USERNAME/restaurant-frontend:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80

          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: restaurant
  labels:
    app.kubernetes.io/name: restaurant-app
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
